...
        app:layout_constraintTop_toTopOf="@id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Name Input -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Full Name"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/netIdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Net Id"
        android:inputType="textEmailAddress"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/netIdEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
...
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"/>

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Register"
        app:layout_constraintTop_toBottomOf="@id/themeSelector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back to Login Button -->
    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Back to Login"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
...
